--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ main {
     position: relative;
     width: 100rem;
     height: 60rem;
+    margin: 6rem 12rem;
     background-color: rgba(255, 255, 255, 0.35);
     backdrop-filter: blur(200px);
     filter: blur();
@@ -115,9 +116,12 @@ main {
     background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(10px);
 
-    padding: 0.7rem 2.5rem;
+    padding: 1.2rem 2.4rem;
     border-radius: 50rem;
     box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
+
+    display: flex;
+    align-items: center;
 }
 
 .btn::first-letter {
@@ -128,6 +132,10 @@ main {
 
 .btn--new {
     top: 4rem;
+}
+
+.media {
+    display: none;
 }
 
 .btn--big {
