--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,54 @@ main {
     color: #099268;
 }
 
+.close-modal {
+    position: absolute;
+    top: 1.2rem;
+    right: 2rem;
+    font-size: 5rem;
+    color: #333;
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+
+.rule-modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+
+    background-color: rgba(255, 255, 255, 0.85);
+    padding: 3.2rem 4.8rem;
+    border-radius: 9px;
+    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
+    z-index: 10;
+}
+
+.rule-modal h1 {
+    font-size: 2.6rem;
+    margin-bottom: 2.8rem;
+}
+
+.rule-modal ol {
+    margin-left: 1.6rem;
+}
+.rule-modal li {
+    font-size: 1.6rem;
+}
+
+.rule-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px);
+    z-index: 5;
+}
+
 .hidden {
     display: none;
 }
