--- a/css/style.css
+++ b/css/style.css
@@ -182,12 +182,12 @@ main {
 }
 
 .player--winner {
-    background-color: #2f2f2f;
+    background-color: #021d15;
 }
 
 .player--winner .name {
     font-weight: 700;
-    color: #099268;
+    color: #fcc419;
 }
 
 .close-modal {
