--- a/css/queries.css
+++ b/css/queries.css
@@ -220,4 +220,9 @@
         width: 75%;
         padding: 2.8rem 3.6rem;
     }
+
+    .rule-modal h1 {
+        font-size: 2.4rem;
+        margin-right: 1.2rem;
+    }
 }
